Nuevos colores de la marca

--- a/index-2.html
+++ b/index-2.html
@@ -74,24 +74,24 @@
             <div class="row off2">
               <div class="grid_4">
                 <h6>Cum sociis natoque penatibus et magnis dis parturient </h6>
-                <p class="txt1">Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus. Donec sit amet</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus. Donec sit amet</p>
               </div>
               <div class="grid_4">
                 <h6>Fusce feugiat malesuada odio. Morbi nunc odio, gravida  cursus</h6>
-                <p class="txt1">Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend.</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend.</p>
               </div>
               <div class="grid_4">
                 <h6>Aenean nonummy hendrerit mauris. Phasellus porta suscipit</h6>
-                <p class="txt1">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies phare</p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies phare</p>
               </div>
             </div>
           </div>
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Premium quarry Servicios</h2>
+            <h2>Más Servicios</h2>
             <h5 class="off2">Donec sit amet eros. Lorem ipsum dolor amet, consectetuer adipiscing elit.</h5>
-            <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.</p><a href="#" class="btn">Get now</a>
+            <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.</p>
           </div>
         </section>
       </main>
@@ -100,39 +100,7 @@
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Productos</h5>
-                <ul>
-                  <li><a href="#">Vestibulum</a></li>
-                  <li><a href="#">Culis lacinia</a></li>
-                  <li><a href="#">Proin dictum</a></li>
-                  <li><a href="#">Fusce euismod</a></li>
-                  <li><a href="#">Consequat</a></li>
-                  <li><a href="#">Adipiscing elit</a></li>
-                </ul>
-                <h5>New solutions</h5>
-                <ul>
-                  <li><a href="#">Sed ut perspiciatis unde</a></li>
-                  <li><a href="#">Omnis iste natus</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Technology</h5>
-                <ul>
-                  <li><a href="#">Vatus error sivolu</a></li>
-                  <li><a href="#">Tatem accus</a></li>
-                </ul>
-                <h5>Information</h5>
-                <ul>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Clients</a></li>
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Reseller</a></li>
-                  <li><a href="#">Support</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Company</h5>
+                <h5>Mapa de Sitio</h5>
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
@@ -141,12 +109,13 @@
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Ubicación</a></li>
                   </ul>
-                </nav>
+              </div>
+              <div class="grid_3">
                 <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/"  class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
               <div class="grid_3">
@@ -159,13 +128,15 @@
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
+              </div>
+              <div class="grid_3">
                 <h5>Ubicación</h5>
                 <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
-        <section class="copyright">
+        <section class="copyright presentacion">
           <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
