--- a/index-3.html
+++ b/index-3.html
@@ -63,33 +63,16 @@
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Our quarry Productos</h2>
+            <h2>Galería</h2>
             <div class="row off1">
-              <div class="grid_4"><a href="#" class="img"><img src="images/page-4_img02.jpg" alt=""><span>Cum sociis natoque penatibus</span></a></div>
-              <div class="grid_4"><a href="#" class="img"><img src="images/page-4_img03.jpg" alt=""><span>Praesent vestim molstie lacus </span></a></div>
-              <div class="grid_4"><a href="#" class="img"><img src="images/page-4_img04.jpg" alt=""><span>Donec accumsan malesuada</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/1.jpg" alt=""><span>Renta de grúas para maniobras</span></div>
+              <div class="grid_4"><a class="img"><img src="images/2.jpg" alt=""><span>Venta de Grúas Industriales</span></div>
+              <div class="grid_4"><a class="img"><img src="images/3.jpg" alt=""><span>Renta de grúas</span></div>
             </div>
-            <div class="row">
-              <div class="grid_12"><a href="#" class="btn">See all</a></div>
-            </div>
-          </div>
-        </section>
-        <section class="well bg-color">
-          <div class="container">
-            <h2 class="center">Most popular</h2>
-            <div class="row">
-              <article class="grid_4 post">
-                <h6>Aenean nonummy hendrerit mauris. Phasellus porta Fusce</h6>
-                <p class="txt1">Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus. Donec sit amet eros.</p><a href="#" class="btn">Read more</a>
-              </article>
-              <article class="grid_4 post">
-                <h6>Donec accumsan malesuada orci. Donec sit amet eros ipsum</h6>
-                <p class="txt1">Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend.</p><a href="#" class="btn">Read more</a>
-              </article>
-              <article class="grid_4 post">
-                <h6>Cum sociis natoque penatibus et magnis dis parturient mont</h6>
-                <p class="txt1">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies phare</p><a href="#" class="btn">Read more</a>
-              </article>
+            <div class="row off1">
+              <div class="grid_4"><a class="img"><img src="images/4.jpg" alt=""><span>Grúas industriales</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/5.jpg" alt=""><span>Grúas de plataforma</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/6.jpg" alt=""><span>Infraestructura privada</span></a></div>
             </div>
           </div>
         </section>
@@ -101,23 +84,23 @@
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Featured Productos</h2>
+            <h2>Más Productos</h2>
             <ul class="row index-list">
               <li class="grid_3">
                 <h5><a href="#">Penatibus et magnis</a></h5>
-                <p>Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque. Fusce suscipit penatibus et magnis dis parturient.</p><a href="#" class="btn">Read more</a>
+                <p>Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque. Fusce suscipit penatibus et magnis dis parturient.</p>
               </li>
               <li class="grid_3">
                 <h5><a href="#">Nascetur ridiculus</a></h5>
-                <p>Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis partur ient montes, nascetur ridiculus.</p><a href="#" class="btn">Read more</a>
+                <p>Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis partur ient montes, nascetur ridiculus.</p>
               </li>
               <li class="grid_3">
                 <h5><a href="#">Aenean auctor wisi</a></h5>
-                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet.</p><a href="#" class="btn">Read more</a>
+                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet.</p>
               </li>
               <li class="grid_3">
                 <h5><a href="#">Integer rutrum ante</a></h5>
-                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accmsan malesuada orci. Donec sit ame.</p><a href="#" class="btn">Read more</a>
+                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accmsan malesuada orci. Donec sit ame.</p>
               </li>
             </ul>
           </div>
@@ -133,39 +116,7 @@
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Productos</h5>
-                <ul>
-                  <li><a href="#">Vestibulum</a></li>
-                  <li><a href="#">Culis lacinia</a></li>
-                  <li><a href="#">Proin dictum</a></li>
-                  <li><a href="#">Fusce euismod</a></li>
-                  <li><a href="#">Consequat</a></li>
-                  <li><a href="#">Adipiscing elit</a></li>
-                </ul>
-                <h5>New solutions</h5>
-                <ul>
-                  <li><a href="#">Sed ut perspiciatis unde</a></li>
-                  <li><a href="#">Omnis iste natus</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Technology</h5>
-                <ul>
-                  <li><a href="#">Vatus error sivolu</a></li>
-                  <li><a href="#">Tatem accus</a></li>
-                </ul>
-                <h5>Information</h5>
-                <ul>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Clients</a></li>
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Reseller</a></li>
-                  <li><a href="#">Support</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Company</h5>
+                <h5>Mapa de Sitio</h5>
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
@@ -174,7 +125,8 @@
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Ubicación</a></li>
                   </ul>
-                </nav>
+              </div>
+              <div class="grid_3">
                 <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
@@ -192,13 +144,15 @@
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
+              </div>
+              <div class="grid_3">
                 <h5>Ubicación</h5>
                 <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
-        <section class="copyright">
+        <section class="copyright presentacion">
           <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
