--- a/index-5.html
+++ b/index-5.html
@@ -76,49 +76,12 @@
           </div>
         </section>
       </main>
-      <!--
-      ========================================================
-                                  FOOTER
-      ========================================================
-      -->
       <footer>
         <section class="well1 ins1 mobile-center">
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Productos</h5>
-                <ul>
-                  <li><a href="#">Vestibulum</a></li>
-                  <li><a href="#">Culis lacinia</a></li>
-                  <li><a href="#">Proin dictum</a></li>
-                  <li><a href="#">Fusce euismod</a></li>
-                  <li><a href="#">Consequat</a></li>
-                  <li><a href="#">Adipiscing elit</a></li>
-                </ul>
-                <h5>New solutions</h5>
-                <ul>
-                  <li><a href="#">Sed ut perspiciatis unde</a></li>
-                  <li><a href="#">Omnis iste natus</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Technology</h5>
-                <ul>
-                  <li><a href="#">Vatus error sivolu</a></li>
-                  <li><a href="#">Tatem accus</a></li>
-                </ul>
-                <h5>Information</h5>
-                <ul>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Clients</a></li>
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Reseller</a></li>
-                  <li><a href="#">Support</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Company</h5>
+                <h5>Mapa de Sitio</h5>
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
@@ -127,7 +90,8 @@
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Ubicación</a></li>
                   </ul>
-                </nav>
+              </div>
+              <div class="grid_3">
                 <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
@@ -145,13 +109,15 @@
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
+              </div>
+              <div class="grid_3">
                 <h5>Ubicación</h5>
                 <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
-        <section class="copyright">
+        <section class="copyright presentacion">
           <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
