--- a/index.html
+++ b/index.html
@@ -165,20 +165,20 @@
           <div class="container">
             <div class="banner_wr">
               <ul class="banner">
-                <li>
-                  <h3 class="presentacion">Bienvenido</h3>
+                <li class="presentacion">
+                  <h3 >Bienvenido</h3>
                   <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a><br><br>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer más</a><br><br>
                 </li>
-                <li>
-                  <h3 class="presentacion">Productos</h3>
+                <li class="presentacion">
+                  <h3 >Productos</h3>
                   <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a><br><br>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer más</a><br><br>
                 </li>
-                <li>
-                  <h3 class="presentacion">Ubicación</h3>
+                <li class="presentacion">
+                  <h3 >Ubicación</h3>
                   <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a><br><br>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer más</a><br><br>
                 </li>
               </ul>
             </div>
@@ -223,22 +223,22 @@
         </section>
         <section data-mobile="true" class="well2 mobile-center parallax" style="background-image: url(images/parallax1.jpg);">
           <div class="container">
-            <h2 class="center">They say</h2>
+            <h2 class="center">Nuestro Equipo</h2>
             <div class="row">
-              <blockquote class="grid_4"><img src="images/page-1_img10.jpg" alt="">
-                <p>
+              <blockquote class="grid_4"><center><img src="images/page-1_img10.jpg" alt=""></center>
+                <p align="justify">
                   <q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sit amet conse minim veniam et dolore magna.</q>
                 </p>
                 <cite><strong>Tom copper </strong> - Penatibus Co.</cite>
               </blockquote>
-              <blockquote class="grid_4"><img src="images/page-1_img10.jpg" alt="">
-                <p>
+              <blockquote class="grid_4"><center><img src="images/page-1_img10.jpg" alt=""></center>
+                <p align="justify">
                   <q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sit amet conse minim veniam et dolore magna.</q>
                 </p>
                 <cite><strong>Nick Penta </strong>  - Zoltan Co.</cite>
               </blockquote>
-              <blockquote class="grid_4"><img src="images/page-1_img11.jpg" alt="">
-                <p>
+              <blockquote class="grid_4"><center><img src="images/page-1_img11.jpg" alt=""></center>
+                <p align="justify">
                   <q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sit amet conse minim veniam et dolore magna.</q>
                 </p>
                 <cite><strong>Ric Simon </strong> - Berrows Co.</cite>
@@ -260,46 +260,11 @@
       </main>
 
       <footer>
-        <section class="map">
-          <!-- mapa -->
-        </section>
         <section class="well1 ins1 mobile-center">
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Productos</h5>
-                <ul>
-                  <li><a href="#">Vestibulum</a></li>
-                  <li><a href="#">Culis lacinia</a></li>
-                  <li><a href="#">Proin dictum</a></li>
-                  <li><a href="#">Fusce euismod</a></li>
-                  <li><a href="#">Consequat</a></li>
-                  <li><a href="#">Adipiscing elit</a></li>
-                </ul>
-                <h5>New solutions</h5>
-                <ul>
-                  <li><a href="#">Sed ut perspiciatis unde</a></li>
-                  <li><a href="#">Omnis iste natus</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Technology</h5>
-                <ul>
-                  <li><a href="#">Vatus error sivolu</a></li>
-                  <li><a href="#">Tatem accus</a></li>
-                </ul>
-                <h5>Information</h5>
-                <ul>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Clients</a></li>
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Reseller</a></li>
-                  <li><a href="#">Support</a></li>
-                </ul>
-              </div>
-              <div class="grid_3">
-                <h5>Company</h5>
+                <h5>Mapa de Sitio</h5>
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
@@ -308,7 +273,8 @@
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Ubicación</a></li>
                   </ul>
-                </nav>
+              </div>
+              <div class="grid_3">
                 <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
@@ -326,13 +292,15 @@
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
+              </div>
+              <div class="grid_3">
                 <h5>Ubicación</h5>
                 <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
-        <section class="copyright">
+        <section class="copyright presentacion">
           <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
