--- a/index-3.html
+++ b/index-3.html
@@ -56,7 +56,7 @@
               <div class="grid_6"><img src="images/page-4_img01.jpg" alt=""></div>
               <div class="grid_6 mg-add">
                 <h5>Donec sit amet eros. Lorem ipsum dolor amet consectetuer adipiscing elit.</h5>
-                <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adi piscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phllus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. </p><a href="#" class="btn">Read more</a>
+                <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adi piscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phllus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. </p><a href="#" class="btn">Leer mas</a>
               </div>
             </div>
           </div>
@@ -78,8 +78,8 @@
         </section>
         <section data-mobile="true" class="well4 center parallax" style='background-image: url("images/parallax4.jpg");'>
           <div class="container">
-            <h2>Delivering quality stone Productos</h2>
-            <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna<br/> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
+            <h2>Más Texto</h2>
+            <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna<br/> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer mas</a>
           </div>
         </section>
         <section class="well center">
