Acomodo meta datos, olores de fondo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,38 @@
 <head>
     <title>Inicio</title>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no">
+      <meta name="description" content="Grúas J. McPris se encuentra en Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, Estado de México. Servicio y calidad en Venta de Grúas Industriales" /><meta name="keywords" content="Grúas J. McPris, Venta de Grúas Industriales, Col. Recursos Hidraulicos, Tultitlán, Estado de México" />
+      <meta property="og:type" content="business.business" />
+      <!-- <meta property="og:url" content="http://paginas.seccionamarilla.com.mx/gruas-j-mcpris/venta-de-gruas-industriales/estado-de-mexico/tultitlan/-/recursos-hidraulicos/" /> -->
+      <meta property="og:title" content="Grúas J. McPris" />
+      <meta property="business:contact_data:street_address" content="Vía López Portillo 76" />
+      <meta property="business:contact_data:locality" content="Tultitlán" />
+      <meta property="business:contact_data:region" content="MEX" />
+      <meta property="business:contact_data:postal_code" content="54913" />
+      <meta property="business:contact_data:country_name" content="MX" />
+      <meta property="business:contact_data:phone_number" content="(55) 5893-2231" />
+      <!-- <meta property="business:contact_data:website" content="http://paginas.seccionamarilla.com.mx/gruas-j-mcpris/venta-de-gruas-industriales/estado-de-mexico/tultitlan/-/recursos-hidraulicos/" /> -->
+      <meta property="place:location:latitude" content="19.61927100000000" />
+      <meta property="place:location:longitude" content="-99.17303300000000" />
+      <meta property="business:hours:day" content="Lunes" />
+      <meta property="business:hours:start" content="9:00" />
+      <meta property="business:hours:end" content="18:00" />
+      <meta property="business:hours:day" content="Martes" />
+      <meta property="business:hours:start" content="9:00" />
+      <meta property="business:hours:end" content="18:00" />
+      <meta property="business:hours:day" content="Miércoles" />
+      <meta property="business:hours:start" content="9:00" />
+      <meta property="business:hours:end" content="18:00" />
+      <meta property="business:hours:day" content="Jueves" />
+      <meta property="business:hours:start" content="9:00" />
+      <meta property="business:hours:end" content="18:00" />
+      <meta property="business:hours:day" content="Viernes" />
+      <meta property="business:hours:start" content="9:00" />
+      <meta property="business:hours:end" content="18:00" />
+      <meta property="business:hours:day" content="Sábado" />
+      <meta property="business:hours:start" content="9:00" />
+      <meta property="business:hours:end" content="15:00" />
+
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
@@ -105,7 +136,7 @@
               <ul data-type="navbar" class="sf-menu">
                 <li class="active"><a href="index.html">Inicio</a>
                 </li>
-                <li><a href="index-1.html">Acerca de</a>
+                <li><a href="acercade.html">Acerca de</a>
                   <!-- <ul>
                     <li><a href="#">Lorem ipsum dolor</a></li>
                     <li><a href="#">Conse ctetur adipisicing</a></li>
@@ -121,11 +152,11 @@
                     <li><a href="#">Ut enim ad minim</a></li>
                   </ul> -->
                 </li>
-                <li><a href="index-2.html">Servicios</a>
+                <li><a href="servicios.html">Servicios</a>
                 </li>
-                <li><a href="index-3.html">Productos</a>
+                <li><a href="productos.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Contacto</a>
+                <li><a href="contacto.html">Contacto</a>
                 </li>
               </ul>
             </nav>
@@ -246,7 +277,7 @@
             </div>
           </div>
         </section>
-        <section class="well1 center">
+        <section class="well1 center ">
           <div class="container">
             <h2>Nuestros Clientes</h2>
             <ul class="row off1 list">
@@ -270,22 +301,22 @@
                 <h5>Mapa de Sitio</h5>
                 <nav>
                   <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Acerca de</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="acercade.html">Acerca de</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Ubicación</a></li>
                   </ul>
               </div>
-              <div class="grid_3">
+              <div class="grid_2">
                 <h5>Síguenos</h5>
                 <ul>
-                  <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
-                  <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
-                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" class="fa-facebook"><span>Facebook</span></a></li>
+                  <li><a href="#" target="_blank" class="fa-google-plus"><span>Google+</span></a></li>
+                  <li><a href="https://twitter.com/ventasgruasind1" target="_blank" class="fa-twitter"><span>Twitter</span></a></li>
+                  <li><a href="https://www.facebook.com/maquinaria.jmcpris/" target="_blank" class="fa-facebook"><span>Facebook</span></a></li>
                 </ul>
               </div>
-              <div class="grid_3">
+              <div class="grid_4">
                 <h5>Contacto</h5>
                 <dl>
                   <dt>Teléfono:</dt>
@@ -293,7 +324,7 @@
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
-                  <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
+                  <dd><a href="mailto:ventas.gruasindustriales@gmail.com">&nbsp;ventas.gruasindustriales@gmail.com</a></dd>
                 </dl>
               </div>
               <div class="grid_3">
